--- a/front-end/aula11 Grid-Layout-pt2/grid.html
+++ b/front-end/aula11 Grid-Layout-pt2/grid.html
@@ -4,11 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aula 21/08</title>
-    <link rel="stylesheet" href="grid.css">
+    <!-- <link rel="stylesheet" href="grid.css"> -->
+    <!-- <link rel="stylesheet" href="grid-area.css"> -->
+    <!-- <link rel="stylesheet" href="grid-item.css"> -->
+    <!-- <link rel="stylesheet" href="grid-content.css"> -->
+    <link rel="stylesheet" href="grid-autofit.css">
 </head>
 <body>
     <div class="container">
-        
-    </div>    
+        <div class="item item-1">1</div>
+        <div class="item item-2">2</div>
+        <div class="item item-3">3</div>
+        <div class="item item-4">4</div>
+    </div>
+    
 </body>
 </html>
