--- a/front-end/aula12 ChatBot Gemini FrontEnd/index.html
+++ b/front-end/aula12 ChatBot Gemini FrontEnd/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gemini API</title>
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -26,8 +26,8 @@
                 <div class="message message--sent">
                     <div class="message__text">Quem é você</div>
                 </div>
-                <div class="message message-assistant">
-                    <div class="message__text">Assistente Gemini</div>
+                <div class="message message--assistant">
+                    <div class="message__text">Sou uma IA.......</div>
                 </div>
             </div>
         </main>
